[gd_scene load_steps=5 format=3 uid="uid://bnwcqcma1nw5y"]

[ext_resource type="Script" uid="uid://cbxialigjx3mi" path="res://scripts/bidding/bidding_menu.gd" id="1_6fnxy"]
[ext_resource type="PackedScene" uid="uid://chvxopcas8yjd" path="res://scenes/bidding/player_stat_block.tscn" id="2_2qcm0"]
[ext_resource type="Script" uid="uid://bp1b68d3621ng" path="res://scripts/bidding/bidding_manager.gd" id="2_e2fi0"]
[ext_resource type="PackedScene" uid="uid://4itayjujs3an" path="res://scenes/bidding/upgrade_slot.tscn" id="4_2l2ip"]

[node name="BiddingMenu" type="Control" groups=["bidding_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fnxy")

[node name="BiddingManager" type="Node" parent="."]
script = ExtResource("2_e2fi0")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 68.0
offset_top = 38.0
offset_right = -67.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelReadyPlayers" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 0
text = "Waiting for Players to Ready up
0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTimerCountdown" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -89.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
text = "Game starting in 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonReady" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 415.0
offset_top = -61.0
offset_right = -415.2
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "Ready"

[node name="PlayerStats" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 143.0
grow_horizontal = 2

[node name="PlayerStatBlock" parent="Background/PlayerStats" instance=ExtResource("2_2qcm0")]
layout_mode = 2

[node name="PlayerStatBlock2" parent="Background/PlayerStats" instance=ExtResource("2_2qcm0")]
layout_mode = 2

[node name="PlayerStatBlock3" parent="Background/PlayerStats" instance=ExtResource("2_2qcm0")]
layout_mode = 2

[node name="PlayerStatBlock4" parent="Background/PlayerStats" instance=ExtResource("2_2qcm0")]
layout_mode = 2

[node name="LabelBidMoney" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 67.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
text = "Money: 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeSlots" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.453
anchor_right = 1.0
anchor_bottom = 0.659
offset_top = 36.884
offset_bottom = 59.052
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="UpgradeSlot" parent="Background/UpgradeSlots" instance=ExtResource("4_2l2ip")]
layout_mode = 2

[node name="UpgradeSlot2" parent="Background/UpgradeSlots" instance=ExtResource("4_2l2ip")]
layout_mode = 2

[node name="UpgradeSlot3" parent="Background/UpgradeSlots" instance=ExtResource("4_2l2ip")]
layout_mode = 2

[node name="UpgradeSlot4" parent="Background/UpgradeSlots" instance=ExtResource("4_2l2ip")]
layout_mode = 2

[node name="TimerStartRound" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
